[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/items/dirt_item.png" type="Texture" id=1]
[ext_resource path="res://Scenes/DropLoot.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 100.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="DropLoot" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Graphic" type="Sprite" parent="."]
unique_name_in_owner = true
texture = ExtResource( 1 )

[node name="LootArea" type="Area2D" parent="." groups=["Loots"]]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Col" type="CollisionShape2D" parent="LootArea"]
self_modulate = Color( 0.290196, 1, 0, 1 )
shape = SubResource( 2 )

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="LootArea" to="." method="_on_LootArea_body_entered"]
[connection signal="body_exited" from="LootArea" to="." method="_on_LootArea_body_exited"]
